    - Fixed army deployer auto-deploy toggle not working.
    - Fixed army planner's number input not working.
    - Fixed a crash by adding more rules to exclude surfaces from ERM managed planets/surfaces.
    - Fixed an issue when "Free for all" mode modifies entity.energy_per_shield.
    - Fixed an planet stats UI issue.
    - Fixed a crash when other mods mess up custom attack group logics and added warning message to notify player once per game session.

---------------------------------------------------------------------------------------------------
Version: 2.0.12
Date: 2024-12-10

  Bugfixes:
    - Fixed planet kill counts did not persist through save.

---------------------------------------------------------------------------------------------------
Version: 2.0.11
Date: 2024-12-10

  Bugfixes:
    - Fixed startup crash when including ion cannon mk2 on a not space-age game.  It changed to space-age only entity.

---------------------------------------------------------------------------------------------------
Version: 2.0.10
Date: 2024-12-10
  
  Features:
    - [Player death loop detection]  
    - When player repeatedly dies near the spawn area on a planet, central command offers an uWuClear rapid delivery.
    - It kills all enemies and some player entities within 384 tiles from your force's spawn point.
    - It also reduces all active attack points for the enemy forces on that planet to 0.
    - This action requires defines.input_action.deconstruct permission for multiplayer.
    
  Changes:
    - Added "reset active attack points" button to enemy detail window (admin-only). 
    - Base buildings now roll on quality tier, instead of using unit's tier.  This avoids single tier dominating an area.
    - Victorious group retire themselves after building their victory base, instead of using set_autonomous() to preserve performance.